Fixed gallery css and a minor fix on welcome page
Still broken on special devices like Samsung Fold and any devices after 1080px width range

--- a/server/try2/gallery.css
+++ b/server/try2/gallery.css
@@ -1,18 +1,26 @@
+#nav-bar{
+    position: fixed;
+    width: 100vw;
+}
+
 .gallery_box {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: fit-content;
     width: 100vw;
     background: linear-gradient(to bottom, #027e89, rgba(0, 0, 0, 0.8))
 }
 
 .gallery_display {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 2fr);
     grid-template-rows: auto;
     grid-gap: 1.2rem;
-    padding: 0 1rem;
+    justify-items: center;
+    align-items: center;
+    padding: 10% 5%;
+    height: fit-content;
 }
 
 .gallery_display .bg {
@@ -78,30 +86,21 @@
     opacity: 1;
 }
 
-.space_holder{
-    display: none;
-    visibility: hidden;
-}
-
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 1080px){
     /*Gallery Styling*/
     .gallery_box{
         height: fit-content;
     }
 
-    .space_holder{
-        display: block;
-        visibility: hidden;
-    }
-
     .gallery_display {
-        position: absolute;
-        top: 96%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: fit-content;
+        padding: 30% 10%;
+        gap: 2rem;
+
     }
 
     #nav-bar a.nav-img{
